--- a/src/com/vince/res/r.properties
+++ b/src/com/vince/res/r.properties
@@ -21,4 +21,7 @@ io.write.error=\u5199\u5165\u6570\u636e\u5931\u8d25\uff01
 
 home.function=1\u3001\u67e5\u8be2\u5168\u90e8\u8ba2\u5355 2\u3001\u67e5\u627e\u8ba2\u5355 3\u3001\u8d2d\u4e70
 
+product.input.id=\u8bf7\u8f93\u5165\u5546\u54c1\u7f16\u53f7\uff1a
+product.input.shoppingNum=\u8bf7\u8f93\u5165\u8d2d\u4e70\u6570\u91cf
+
 
